--- a/main.css
+++ b/main.css
@@ -78,6 +78,88 @@ header .auth .Register{
     background-color: #545BE8;
     color: white;
 }
+.whatwegive .row {
+    align-items: flex-start;
+    padding: 20px 0;
+}
+.whatwegive .data{
+    width: calc(((100% - 50px)* 1/3));
+    display: flex;
+    flex-wrap: wrap;
+   flex-direction: column;
+   gap: 20px;
+}
+.whatwegive .data span{
+    color:rgba(84, 91, 232, 1);
+    }
+    .whatwegive .data h2{
+      font-size: 45px;
+      font-weight: 900;
+    }
+    .whatwegive .data p{
+    color:rgba(150, 150, 150, 1);
+    }
+.frame{
+    width: calc(((100% - 50px)* 2/3)); 
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: row;
+    padding: 20px;
+    background-color: #FFF;
+    gap: 20px;
+}
+.frame .row{
+    gap: 40px;
+    align-items: center;
+}
+.frame .frame-items {
+    display: flex;
+    gap: 40px;
+    flex-wrap: wrap;
+    padding: 30px;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+}
+.frame1 , .frame2 , .frame3 {
+    background-color: #545BE8;
+    padding: 20px 20px;
+   font-family: Inter;
+   font-size: 7.413px;
+   font-style: normal;
+   font-weight: 400;
+   line-height: normal;
+   gap: 20px;
+   border-radius: 10px;
+  color: #eee;
+}
+.frame svg{
+    width: 15px;
+    height: 15px;
+    border: 1px solid #fff;
+    padding: 10px;
+    box-sizing: content-box;
+    border-radius: 50%;
+    background-color: white;
+}
+.frame h4{
+    color: #FFF;
+font-family: Inter;
+font-size: 10.413px;
+font-style: normal;
+font-weight: 700;
+line-height: 12.356px; /* 166.667% */
+}
+.frame p{
+    color: #DDD;
+font-family: Poppins;
+font-size: 10.766px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
 .selected{
     background: linear-gradient(180deg, #545BE8 0%, #272DB0 100%);
     display: flex;
