--- a/main.css
+++ b/main.css
@@ -78,12 +78,109 @@ header .auth .Register{
     background-color: #545BE8;
     color: white;
 }
+.start {
+    background: #F5F5F5;
+    width: 100%;
+    height: 400.361px;
+    gap: 50px;
+    padding: 30px;
+} 
+.start .part1{
+    width: (( 100% - 50px) /2);
+    gap: 30px;
+}
+.info .letsb{
+    color: #545BE8;
+    font-family: Inter;
+    font-size: 15.413px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    }
+.info .begins
+{
+    color: #545BE8;
+    font-family: Inter;
+    font-size: 20.413px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.info h2{
+    color: #141E32;
+font-family: Poppins;
+font-size: 30.359px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+.info .stc{
+    color: #545BE8;
+font-family: Poppins;
+font-size: 30.359px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+.info p{
+    color: #969696;
+font-family: Poppins;
+font-size: 10.413px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+.start  a{
+    font-family: 'Inter', sans-serif;
+    padding: 5.354px 30px;
+    border-radius: 10px;
+    font-size: 13px;
+    display: flex;
+    align-items: center;
+}
+.start .Register{
+    color: white;
+    border: 2px solid #545BE8;
+    background-color: #545BE8;
+}
+
+ .linker {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+ .linker .Play Video{
+    border-radius: 4.119px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    color: #141E32;
+    font-family: Inter;
+    font-size: 7.413px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+} 
+.start .part2{
+    width: (( 100% - 50px) /2);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+}
+.start img{
+    width: calc(((100% - 50px)* 1/3));
+    padding: 20px;
+}
+
 .whatwegive .row {
     align-items: flex-start;
     padding: 20px 0;
 }
 .whatwegive .data{
-    width: calc(((100% - 50px)* 1/3));
+    width: calc(( 100% - 50px) /2);
     display: flex;
     flex-wrap: wrap;
    flex-direction: column;
@@ -118,7 +215,7 @@ header .auth .Register{
     display: flex;
     gap: 40px;
     flex-wrap: wrap;
-    padding: 30px;
+    padding: 36px;
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
@@ -126,7 +223,7 @@ header .auth .Register{
 .frame1 , .frame2 , .frame3 {
     background-color: #545BE8;
     width: calc((100% - 40px) /3);
-    padding: 20px 20px;
+    padding: 40px 20px;
    font-family: Inter;
    font-size: 7.413px;
    font-style: normal;
