--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
 }
 header{
     background-color:#eee;
@@ -193,7 +193,7 @@ padding: 10px;
     right: 0;
 }
 .whatwegive{
-    height: 500px;
+    height: 300px;
 }
 .whatwegive .row {
     align-items: flex-start;
